feat: app runs correctly on java 8